--- a/src/style.scss
+++ b/src/style.scss
@@ -6,5 +6,9 @@
 
 
 .h1-title{
-  @include adaptiveValue("font-size",30 ,22 );
+  @include adaptiveValue("font-size",35 ,24 );
+}
+.h2-title{
+  @include adaptiveValue("font-size",28 ,18 );
+
 }
