--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -4,7 +4,7 @@
   background: $bgHeader;
   @include adaptiveValue("padding-top", 30, 10);
   @include adaptiveValue("padding-bottom", 30, 10);
-  @include sectionMargin();
+  // @include sectionMargin();
  
   &__container {
     display: flex;
@@ -31,8 +31,8 @@
   justify-content: space-between;
   &__list {
     display: flex;
-    @include adaptiveValue("gap", 30, 20);
     justify-content: center;
+    @include adaptiveValue("gap", 30, 20);
     @include adaptiveValue("font-size", 18, 16);
   }
 
