--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -5,10 +5,11 @@
   display: flex;
   flex-direction: column;
   width: toRem(400);
-  margin: 0 auto;
+  margin: toRem(50) auto;
   padding: 20px;
   border-radius: 20px;
   gap: 20px;
+
   &__buttons {
     display: flex;
     gap: 10px;
@@ -25,14 +26,14 @@
 &__input-wrapper {
   position: relative;
   
-  button {
-    position: absolute;
-    right: 0; /* Без лапок */
-    top: 50%; /* Без лапок */
-    transform: translate(-50%, 20%); /* Без лапок */
+}
+}
+.toggle-visable{
+position: absolute;
+    right: 0; 
+    top: 50%; 
+    transform: translate(-50%, 20%); 
     background: none;
     border: none;
     cursor: pointer;
-  }
-}
 }
