--- a/src/pages/posts/Posts.scss
+++ b/src/pages/posts/Posts.scss
@@ -3,15 +3,14 @@
 .posts {
 }
 .nav-posts {
-  position: absolute;
-  right: 0;
-  top: 0;
+max-width: max-content;
   padding: toRem(30);
   background: $bgHeader;
   border-radius: 0 0 toRem(20) toRem(20);
+  @include sectionMargin();
   &__list {
     display: flex;
-    flex-direction: column;
+    
     gap: toRem(10);
     align-items: center;
   }
@@ -48,6 +47,9 @@ position: relative;
 		&__title {
       @include adaptiveValue("font-size",22 ,18 );
       text-align: center;
+   
+      background: $blackTeamText;
+      padding: toRem(10);
 		}
 
 		&__user-name{
@@ -55,13 +57,6 @@ position: relative;
       background: $blackTeamText;
       padding: toRem(10);
     }
-    &__option{
-      position: absolute;
-      right: 0;
-      bottom: 0;
-      display: flex;
-      gap: 15px;
-      padding: 5px;
-    }
+
 }
 
