--- a/src/assets/scss/null.scss
+++ b/src/assets/scss/null.scss
@@ -1,5 +1,5 @@
+@use './variable.scss' as *;
 @import url("https://fonts.googleapis.com/css?family=Poppins:regular,500italic,700&display=swap");
-@import './variable.scss';
 .App {
   overflow: hidden;
 }
