--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -2,7 +2,7 @@
 
 .button {
   padding: toRem(10) toRem(20);
-  background: $blackTeamText;
+  // background: $blackTeamText;
   text-transform: uppercase;
   transition: opacity 0.5s;
   &:hover {
