--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -1,10 +1,10 @@
-@use "/src/style.scss" as  *;
+@use "/src/assets/scss/forvward.scss" as  *;
 
 .button {
-  padding: toRem(10) toRem(20);
-  // background: $blackTeamText;
   text-transform: uppercase;
   transition: opacity 0.5s;
+  background: $blackTeamText;
+  padding: toRem(10) toRem(20);
   &:hover {
     opacity: 0.8;
   }
