--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -4,12 +4,13 @@
   background: $bgHeader;
   @include adaptiveValue("padding-top", 30, 10);
   @include adaptiveValue("padding-bottom", 30, 10);
-  // @include sectionMargin();
+  @include sectionMargin();
  
   &__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 5px;
   }
   &__logo {
     background: white;
@@ -23,13 +24,26 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    
+  }
+  &__user{
     text-transform: capitalize;
+    @media (max-width:$mobile){
+       display: none; 
+    }
+
+  }
+  &__login{
+    @media (max-width:$mobile){
+       padding: 8px !important; 
+    }
   }
 }
 .nav-bar {
   display: flex;
   justify-content: space-between;
   &__list {
+    align-items: center;
     display: flex;
     justify-content: center;
     @include adaptiveValue("gap", 30, 20);
@@ -38,6 +52,7 @@
 
   &__item {
     text-transform: capitalize;
+    text-align: center;
 
     .active {
       transition: color 0.3s;
