--- a/src/pages/posts/post/Post.scss
+++ b/src/pages/posts/post/Post.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: toRem(20);
-  
+
   &__title {
     text-align: center;
     text-transform: uppercase;
@@ -28,6 +28,9 @@
     padding: toRem(30) toRem(20);
     margin-bottom: toRem(30);
     background: $bgHeader;
+    max-height: 100vh;
+    overflow-y: auto;
+
   }
 }
 
