--- a/src/pages/posts/post/Post.scss
+++ b/src/pages/posts/post/Post.scss
@@ -18,6 +18,7 @@
     position: relative;
     text-align: justify;
     margin-bottom: toRem(20);
+    white-space: pre-wrap;
   }
 
   &__wraper {
