--- a/src/pages/auth/Auth.scss
+++ b/src/pages/auth/Auth.scss
@@ -1,7 +1,7 @@
-@use "/src/style.scss" as *;
+@use "/src/assets/scss/forvward.scss" as *;
 
 .auth-form {
-  // background: $bgHeader;
+  background: $bgHeader;
   display: flex;
   flex-direction: column;
   width: toRem(400);
@@ -18,9 +18,9 @@
   }
 
   &__link {
-    // color: $blackTeamText;
+    color: $blackTeamText;
     &:hover {
-      // color: $lightTeamText;
+      color: $lightTeamText;
     }
   }
 &__input-wrapper {
